tdf#114755: Remove extra parenthesis

from SELECT block of INSERT INTO <> SELECT <>

Change-Id: Ibe3c3f5f2fbc15388c716ae262e87137958c1a7e